manifests/advanced-policies/l7-demo/30-service-l7-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: l7-backend
  namespace: l7-demo
spec:
  internalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: l7-backend
  sessionAffinity: None
  type: ClusterIP
